# multi-agent-exit-interview

./: .env.example  .gitignore  CLAUDE.md  README.md  knowledge_graph_exit_interview_project_spec.md  merge_graphs.py  pyproject.toml  run_interview.py
.claude/: settings.json
.claude/agents/: BIT_5534_suggested_edits_review.md  paper-repo-analyst.md
app/agents/: attribute_extractor.py  brief_orchestrator.py  clarification_detector.py  coverage_updater.py  entity_extractor.py  graph_mapper.py  implicit_knowledge_extractor.py  llm_client.py  orchestrator.py  people_extractor.py  relationship_extractor.py  responsibility_extractor.py  risk_extractor.py  stubs.py  systems_extractor.py
app/brief/: extraction_models.py  schema.py  session.py  updater.py
app/config/: config_store.py  context_briefing.py  domain_config.py
app/core/: models.py
app/graph/: merger.py  schema.py  updater.py
app/ingestion/: loaders.py
app/interview/: brief_turn_loop.py  turn_loop.py
app/meta/: config_generator.py  config_reviewer.py  config_validator.py  meta_interview.py  meta_loop.py  meta_questions.json  name_generator.py
app/vault/: vault_compiler.py
demo/: Exit Interview Test Profile_maya.docx  UI_GUIDE.md
docs/: baseline_comparison_notes.md  dev_notes.md  graph_engine.md  paper_evidence_packet.md  project_narrative.md  user_guide.md
eval/: baseline_prompt.md  compare_results.py  run_baseline.py  run_golden_eval.py
exit_interview_graph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/contracts/: test_agent_contracts.py  test_brief_agent_contracts.py
(+45 files in other folders)
