[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exit-interview-graph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "instructor>=1.3",          # structured LLM outputs enforced by Pydantic
    "anthropic>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",              # for FastAPI test client
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: pure logic, no I/O",
    "contract: validate agent JSON schemas",
    "integration: full turn-loop fixtures",
    "eval: live LLM evaluation — requires ANTHROPIC_API_KEY",
]
